state lagging behind  and selected day fixed

--- a/components/fields/datePicker/DatePickerField.scss
+++ b/components/fields/datePicker/DatePickerField.scss
@@ -25,7 +25,6 @@
         min-width: $field-label-min-width;
         max-width: 100%;
         text-align: right;
-        text-wrap: normal;
         flex-wrap: wrap;
     }
 
@@ -54,14 +53,17 @@
         display: flex;
         justify-content: center;
         align-self: center;
-        background-color: lightblue;
+        background-color: $ux-blue-color;
+        color: $ux-white-color;
         & > .previous {
             margin-right:auto;
             float:left;
+            color: $ux-white-color;
         }
         & > .next {
             margin-left: auto;
             float: right;
+            color: $ux-white-color;
         }
     }
 
@@ -74,7 +76,7 @@
           width: calc(100% / 7);
           height: 30px;
           display: inline-block;
-          background-color: white;
+          background-color: $ux-white-color;
           padding: 0;
           margin: 0;
           box-sizing: border-box;
@@ -83,14 +85,14 @@
 
           &:hover {
             .children {
-                background-color: red;
+                background-color: $ux-red-color ;
             }
         }
     
         // for the active class you write
         &.is-active {
             .children {
-               background-color: red;
+               background-color: $ux-red-color ;
             }
         }
 
@@ -99,13 +101,13 @@
             }
 
           & > .selected {
-              background-color: red;
+              background-color: $ux-red-color ;
               border: 1px transparent solid;
               border-radius: 10px;
           }
 
           & > .today {
-            background-color: grey;
+            background-color: $ux-grey-color;
         }
         }
 
